<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/anadir_pregunta"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline4" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/anadir_pregunta_titulo"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titulo_pregunta"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:inputType="textMultiLine"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/anadir_respuesta_correcta"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/respuesta_correcta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/anadir_respuesta_falsa"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/respuesta_falsa_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/anadir_respuesta_falsa"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/respuesta_falsa_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/anadir_respuesta_falsa"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/respuesta_falsa_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/done_button"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/done_button_text" />
</LinearLayout>