<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/pregunta_detail_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:text="@string/pregunta"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline3" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/pregunta_detail_correcta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:padding="16dp"
        android:text="correcta" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/pregunta_detail_falsa1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:padding="16dp"
        android:text="falsa1" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/pregunta_detail_falsa2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:padding="16dp"
        android:text="falsa2" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/pregunta_detail_falsa3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:padding="16dp"
        android:text="falsa3" />

    <Button
        android:id="@+id/remove_button"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/eliminar_pregunta" />
    <Button
        android:id="@+id/update_button"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/actualizar_pregunta" />
</LinearLayout>